[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/buizel_up_00.png" type="Texture" id=1]
[ext_resource path="res://art/buizel_down_01.png" type="Texture" id=2]
[ext_resource path="res://art/buizel_up_01.png" type="Texture" id=3]
[ext_resource path="res://art/buizel_down_00.png" type="Texture" id=4]
[ext_resource path="res://Player.gd" type="Script" id=5]
[ext_resource path="res://WaterJet.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.0
height = 14.0

[node name="Player" type="Area2D"]
script = ExtResource( 5 )
WaterJet = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3.5, 3.5 )
frames = SubResource( 1 )
animation = "down"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="JetOriginDown" type="Position2D" parent="."]
position = Vector2( 0, 45 )

[node name="JetOriginUp" type="Position2D" parent="."]
position = Vector2( 0, -51 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
